# TelegramMaster-PRO

./: .gitignore  CHANGELOG.md  README.eng.md  README.es.md  README.md  main.py  pyproject.toml  requirements.txt  run_doc.py  setup.py
docs/: app.py  полный_перечень_функций.md
docs/static/css/: card.css  style.css
docs/templates/: account_verification.html  connect_accounts.html  creating_groups.html  editing_bio.html  importing_a_list_of_parsed_data.html  index.html  install_python_update_pip.html  inviting.html  launch_telegrammaster.html  menu.html  parsing.html  preliminary_setting_of_program_installation_of_program_by_default.html  program_management.html  registration_api_id_api_hash.html  sending_messages.html  settings.html  software_update.html  subscribe_unsubscribe.html  telegram_limits.html  theory_and_basic_concepts.html  we_are_winding_up_post_views.html  working_with_contacts.html  working_with_errors_telegrammaster.html  working_with_reactions.html
docs/templates/macros/: common_steps.html
docs/templates/settings/: account_limits.html  changing_accounts.html  choice_of_reactions.html  creating_username_list.html  forming_list_of_chats_channels.html  link_entry.html  message_limits.html  message_recording.html  proxy_entry.html  recording_api_id_api_hash.html  recording_reaction_link.html  recording_the_time_between_messages.html  time_between_invites_sending_messages.html  time_between_subscriptions.html  time_between_subscriptionss.html
src/core/: checking_program.py  configs.py  database.py  sqlite_working_tools.py  utils.py
src/core/config/: configs.py
src/core/database/: account.py  create_database.py  database.py
src/features/: session.py
src/features/account/: TGAccountBIO.py  TGChek.py  TGConnect.py  TGContact.py  TGCreating.py  TGReactions.py  TGSendingMessages.py  TGViewingPosts.py  account_bio.py  chek.py  connect.py  (+11 more)
src/gui/: buttons.py  gui.py  gui_elements.py  gui_input_builders.py  main_menu.py  menu.py  notification.py
src/locales/: translations.yaml  translations_loader.py
user_data/: parsed_chat_participants.xlsx  Текстовый документ.txt
user_data/answering_machine/: answering_machine_messages.json
user_data/config/: config_gui.ini  config_path.ini
user_data/reactions/: reactions.json
(+9 files in other folders)
