[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "TelegramMaster-PRO"
version = "2.8.5"
description = "Программа для инвайтинга, парсинга, отправки сообщений в Telegram. Помощь администраторам, для ведения групп и каналов. A program for inviting, parsing, and sending messages to Telegram. Help administrators to manage groups and channels."
readme = "README.md"
requires-python = ">=3.10"  # Изменено с >=3.8 на >=3.10
license = {text = "MIT"}
authors = [
    {name = "PyRusAdmin", email = "zh.vitaliy92@yandex.com"},
]
maintainers = [
    {name = "PyRusAdmin", email = "zh.vitaliy92@yandex.com"},
]
keywords = ["telegram", "bot", "parser", "inviting", "messaging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Основные зависимости проекта
dependencies = [
    "flet==0.80.1",
    "loguru==0.7.3",
    "configparser==7.2.0",
    "peewee==3.18.3",
    "phonenumbers==9.0.20",
    "requests==2.32.5",
    "Telethon==1.42.0",
    "thefuzz==0.22.1",
    "scheduler==0.8.8",
    "openpyxl==3.1.5",
    "uvicorn==0.38.0",
    "fastapi==0.124.4",
    "PyYAML==6.0.3",
    "jinja2==3.1.6",
    "flet-desktop==0.80.1",
    "flet-cli==0.80.1",
]

[project.urls]
Homepage = "https://github.com/PyRusAdmin/TelegramMaster-PRO"
Repository = "https://github.com/PyRusAdmin/TelegramMaster-PRO"

[project.optional-dependencies]
development = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
]

documentation = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.scripts]
telegrammaster = "main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json"]
"src" = ["*.py", "*.json", "*.yaml", "*.yml"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"
